# matrix-rust-sdk

./: Cargo.toml  crates.js  index.html  search-index.js  settings.html  source-files.js
matrix_crypto/: all.html  enum.CryptoStoreError.html  enum.DecodeError.html  enum.DecryptionError.html  enum.KeyImportError.html  enum.MigrationError.html  enum.OutgoingVerificationRequest.html  enum.PkDecryptionError.html  enum.Request.html  enum.RequestType.html  enum.SecretImportError.html  enum.SignatureError.html  enum.UserIdentity.html  enum.Verification.html  fn.migrate.html  fn.set_logger.html  index.html  sidebar-items.js  struct.BackupKeys.html  struct.BackupRecoveryKey.html  struct.BootstrapCrossSigningResult.html  struct.CancelInfo.html  struct.ConfirmVerificationResult.html  struct.CrossSigningKeyExport.html  struct.CrossSigningStatus.html  struct.DecryptedEvent.html  struct.Device.html  struct.DeviceLists.html  struct.KeyRequestPair.html  struct.KeysImportResult.html  struct.MegolmV1BackupKey.html  struct.MigrationData.html  struct.OlmMachine.html  struct.PassphraseInfo.html  struct.PickledAccount.html  struct.PickledInboundGroupSession.html  struct.PickledSession.html  struct.QrCode.html  struct.RequestVerificationResult.html  struct.RoomKeyCounts.html  (+8 more)
matrix_qrcode/: all.html  enum.DecodingError.html  enum.EncodingError.html  enum.QrVerification.html  enum.QrVerificationData.html  index.html  sidebar-items.js  struct.SelfVerificationData.html  struct.SelfVerificationNoMasterKey.html  struct.VerificationData.html
matrix_sdk/: all.html  attr.async_trait.html  (+66 more)
(+11183 files in other folders)
