[workspace]
members = [
    "crates/matrix-qrcode",
    "crates/matrix-sdk",
    "crates/matrix-sdk-appservice",
    "crates/matrix-sdk-base",
    "crates/matrix-sdk-common",
    "crates/matrix-sdk-crypto",
    "crates/matrix-sdk-test",
    "crates/matrix-sdk-test-macros",
]

[patch.crates-io]
olm-sys = { git = "https://gitlab.gnome.org/BrainBlasted/olm-sys/", rev = "4b1b3d09756886934655bd1d3e959d4f203afc29"}
